test/integration/k8/sifnoded-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sifnoded
  name: sifnoded
spec:
  ports:
    - name: "26657"
      port: 26657
      targetPort: 26657
  selector:
    io.kompose.service: sifnoded
status:
  loadBalancer: {}
