test/integration/k8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing
spec:
  ports:
    - name: "26657"
      port: 26657
      targetPort: 26657
    - name: "8646"
      port: 8646
      targetPort: 8646
    - name: "7990"
      port: 7990
      targetPort: 7990
    - name: "80"
      port: 80
      targetPort: 80
  selector:
       app: testing
  type: NodePort
status:
  loadBalancer: {}
